2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_em/Makefile.am, if_em/e1000_osdep.h, if_em/if_em.c:
	Changed 'e1000_osdep.h' to provide stdalone I/O methods for
	select architectures (x86 and PPC -- others fall back on
	libbsdport/bus.h). This lets the low-level driver (everything
	except for 'if_em.c/if_em.h') API be independent of
	BSD networking and libbsdport which is desirable since
	certain applications may wish to just use the low-level
	API for implementing dedicated 'raw-ethernet' drivers
	for BSD-independent, proprietary GigE communication.

2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/alldrv.c: reactivate weak aliases for all
	known/supported drivers. This magic allows the user to
	just link the desired (sub-)set of drivers.

2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport.h: define _KERNEL only if not defined already
	(e.g., from Makefile).

2009-06-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libbsdport/alldrv.c, libbsdport/libbsdport_api.h: Add include
	<stdio.h> for FILE *.

	2009/05/12 (TS)
	- bugfix: bus_write_2() must map to bus_space_write_2 (not 4)
	2009/04/22 (TS)
	- imported SLAC version into OAR repository; added FXP driver.
	2008/03/22 (TS)
	- silence more compiler warnings:
	  * make DMA address void* instead of caddr_t to avoid strict-aliasing violation
	  * add dummy statement to silence 'unused variable' warning.
	- added header with RTEMS version checking macro. Unfortunately, many small
	  details of the RTEMS APIs change with versions :-( [e.g., changed type
	  from unsigned -> uint32_t in st_le32()]. Individual files can include
	  the new <rtems_verscheck.h> and test for RTEMS version to switch conditional
	  compilation (aaargh).
	- header clash; <queue.h> (and others) are present in newlib and in RTEMS/bsdnet
	  but they use a different multiple-inclusion guard :-(. Must pick the right one...
	2007/11/07 (TS)
	- added ChangeLog